增加odoo转avalon模块 优化结构代码